--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <nav class='navbar navbar-expand-lg navbar-dark bg-dark'>
-    <span class='navbar-brand mx-auto h1'>Weather Dashboard</span>
+    <span class='navbar-brand mx-auto'><h1><i class="fas fa-umbrella"></i>Weather Dashboard</h1></span>
   </nav>
   <div class='container'>
     <div class='row'>
